Made the UI responsive

--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
     </head>
     <body>
         <div class="container">
-            <div class="row mt-5">
-                <div class="offset-1 col-5 looking-for-a-lollip">
-                    <h1 class="looking-for-a-lollipop">Looking for a lollipop alternative?</h1>
+            <div class="row d-flex align-items-center justify-content-center mt-5">
+                <div class="col-7 offset-md-1 col-md-5">
+                    <h1 class="looking-for-a-lollip">Looking for a lollipop alternative?</h1>
                     <p class="body text-justify">Lorem Ipsum is simply dummy text of the printing 
                     and typesetting industry. Lorem Ipsum has been the 
                     industry's standard dummy text ever since the 1500s.
                     </p>
                     <div class="row">
                     <button class="btn btn-primary cta-text1 col-5 ml-3">Primary CTA</button>
-                    <button class="btn btn-outline-primary cta-text2 col-5 ml-3">Secondary CTA</button>
+                    <button class="btn btn-outline-primary cta-text2 col-6 ml-2">Secondary CTA</button>
                     </div>
                 </div>
+                <div class="col-4 offset-1 offset-md-2">
+                    <img class="case" src="./img/globe.jpg">
+                </div>
             </div>
-            <div class="row">
-                <div class="bg">
+            <div class="row d-flex justify-content-center">
+                <div class="bg"></div>
+                <div class="top">
                     <h3 class="this-is-a-heading-in">This is a heading in <br>two lines</h3>
                     <img class="rectangle" src="./img/Group 6.png">
                 </div>
@@ -84,6 +88,22 @@
                           </div>
                     </div>
                   </div>
+            </div>
+            <div class="row mb-5 d-flex align-items-center justify-content-center left-buffer">
+                <div class="col-7 col-md-5 top-buffer">
+                    <p class="loved-by-users-reco-copy-2">Loved by users,<br> 
+                        recommended by experts</p>
+                    <p class="lorem-ipsum-is-simple text-justify">Lorem Ipsum is simply dummy text of the printing 
+                    and typesetting industry. Lorem Ipsum has been the 
+                    industry's standard dummy text ever since the 1500s.
+                    </p>
+                    <div class="row">
+                        <button class="btn btn-primary cta-text1 col-5 ml-3">Primary CTA</button>
+                    </div>
+                </div>
+                <div class="col-4 offset-1 lowtop-buffer">
+                    <img class="case" src="img/Group 4.png">
+                </div>
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
