Added button functionality

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     <div class="lorem-ipsum-is-simpl">Lorem Ipsum is simply dummy text of the printing and typesetting.</div>
                 </div>
                 <div class="col-12 d-flex align-items-center justify-content-center mt-4">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn rectBtn">25 Servings</button>
-                        <button type="button" class="btn rectBtn">50 Servings</button>
-                        <button type="button" class="btn rectBtn">100 Servings</button>
-                        <button type="button" class="btn rectBtn">200 Servings</button>
+                    <div class="btn-group" role="group" aria-label="serving buttons">
+                        <button type="button" data-value="25" class="btn rectBtn">25 Servings</button>
+                        <button type="button" data-value="50" class="btn rectBtn">50 Servings</button>
+                        <button type="button" data-value="100" class="btn rectBtn">100 Servings</button>
+                        <button type="button"  data-value="200" class="btn rectBtn">200 Servings</button>
                       </div>
                 </div>
                 <div class="col-12 d-flex align-items-center justify-content-center mt-4">
@@ -69,15 +69,15 @@
                     <div class="card">
                         <div class="card-body">
                         <h5 class="card-title mt-1 mb-5">lollipop</h5>
-                        <strong class="big">$100 </strong><p class="mb-0 para">Per month</p>
-                        <p class="mt-0">For 100 serving</p>
+                        <strong class="big lol">$100 </strong><p class="mb-0 para">Per month</p>
+                        <p class="mt-0 lolServe">For 100 serving</p>
                       </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title mt-1 mb-5">Icecandy</h5>
-                            <strong class="big">$200 </strong><p class="mb-0 para">Per month</p>
-                            <p class="mt-0">For 100 serving</p>
+                            <strong class="big ice">$200 </strong><p class="mb-0 para">Per month</p>
+                            <p class="mt-0 iceServe">For 100 serving</p>
                           </div>
                     </div>
                     <div class="card rectangle-card">
@@ -106,6 +106,7 @@
                 </div>
             </div>
         </div>
+        <script src="./main.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
