Added user review section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,37 @@
                     </div>
                   </div>
             </div>
+            <div class="row d-flex align-items-center justify-content-center mt-4">
+                <div class="col-12 top-buffer">
+                    <h2 class="heres-what-our-cust">Here's what our customers have to say</h2>
+                </div>
+            </div>
+                    <div class="row d-flex align-items-center justify-content-center mb-5">
+                        <div class="col-5 col-md-3 mr-md-4 lowtop-buffer">
+                            <img class="user rounded-circle" src="img/user.jpg">
+                        </div>
+                        <div class="col-7 col-md-5 lowtop-buffer">
+                            <div class="row">
+                            <img class="path" src="img/sign.png">
+                            <blockquote class="blockquote text-justify">
+                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing 
+                                and typesetting industry. Lorem Ipsum has been the industry's 
+                                standard dummy text ever since the 1500s.</p>
+                                <footer class="mt-4 username">
+                                    Raja Ram <br><cite class="usertitle">Tip World</cite>
+                                </footer>  
+                            </blockquote>
+                              
+                            </div>
+                            <div class="row top-buffer">
+                                <div class="oval-active"></div>
+                                <div class="oval"></div>
+                                <div class="oval"></div>
+                                <div class="oval"></div>
+                            </div>
+                            
+                        </div>
+                    </div>
             <div class="row mb-5 d-flex align-items-center justify-content-center left-buffer">
                 <div class="col-7 col-md-5 top-buffer">
                     <p class="loved-by-users-reco-copy-2">Loved by users,<br> 
