--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="row d-flex align-items-center justify-content-center mt-5">
+            <div class="row d-flex align-items-center justify-content-center mt-5 ml-4">
                 <div class="col-7 offset-md-1 col-md-5">
                     <h1 class="looking-for-a-lollip">Looking for a lollipop alternative?</h1>
                     <p class="body text-justify">Lorem Ipsum is simply dummy text of the printing 
